SFD-3847 Sonar code quality fixes for code smell added (#107)